--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=EinfachStonks
 spring.docker.compose.enabled=true
 spring.docker.compose.file=src/infra/compose.yaml
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
-spring.data.mongodb.database=booklink
+//spring.data.mongodb.host=localhost
+//spring.data.mongodb.port=27017
+//spring.data.mongodb.username=admin
+//spring.data.mongodb.password=password
+//spring.data.mongodb.database=booklink
