--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ management.endpoint.health.show.details=always
 # Enabling Prometheus metrics export
 management.prometheus.metrics.export.enabled=true
 
+#Swagger
+# Path for OpenAPI docs (default is /v3/api-docs)
+#springdoc.api-docs.enabled = true
+#springdoc.api-docs.path=/api-docs
+
+# Path for Swagger UI (default is /swagger-ui.html)
+#springdoc.swagger-ui.path=/swagger-ui.html
+
