--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>dev.misei</groupId>
-    <artifactId>EinfachStonks</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>EinfachStonks</name>
-    <description>EinfachStonks</description>
+    <artifactId>EinfachML</artifactId>
+    <version>0.0.1</version>
+    <name>EinfachML</name>
+    <description>EinfachML</description>
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -79,6 +79,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
